# mpris_status

./: Cargo.toml  flake.nix
