[package]
name = "status"
edition = "2021"
version = "0.1.0"

[dependencies]
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[dependencies.futures-util]
version = "0.3.31"
default-features = false

[dependencies.tokio]
features = ["rt-multi-thread", "macros"]
version = "1.41.1"

[dependencies.zbus]
version = "3.15.2"
features = ["tokio"]
default-features = false
